--- a/staffmanager/templates/departments.html
+++ b/staffmanager/templates/departments.html
@@ -10,4 +10,19 @@
     </div>
 </div>
 
+<ul class="collapsible">
+    {% for department in departments|sort(attribute="start_date") %}
+    <li>
+        <div class="collapsible-header white-text light-blue darken-4">
+            <i class="fas fa-caret-down"></i>
+            <strong>{{ department.department_name }}</strong> 
+        </div>
+        <div class="collapsible-body">
+            <p>
+                <a href="{{ url_for('edit_department', department_id=department.id) }}" class="btn green accent-4">Edit</a>
+            </p>
+        </div>
+    </li>
+    {% endfor %}
+</ul>
 {% endblock %}
