--- a/staffmanager/templates/departments.html
+++ b/staffmanager/templates/departments.html
@@ -1,28 +1,30 @@
 {% extends "base.html" %}
 {% block content %}
-<h3 class="brown-text text darken-4 center-align">Department</h3>
+
+<h3 class="light-blue-text text-darken-4 center-align">Departments</h3>
 
 <div class="row">
     <div class="col s12 center-align">
-        <a href="{{ url_for('add_department') }}" class="btn-large black-text yellow accent-4">
-            Add Category <i class="fa-solid fa-plus-square right"></i>
+        <a href="{{ url_for('add_department') }}" class="btn-large light-blue darken-2">
+            Add Department <i class="fas fa-plus-square right"></i>
         </a>
     </div>
 </div>
 
-<ul class="collapsible">
-    {% for department in departments|sort(attribute="start_date") %}
-    <li>
-        <div class="collapsible-header white-text light-blue darken-4">
-            <i class="fas fa-caret-down"></i>
-            <strong>{{ department.department_name }}</strong> 
-        </div>
-        <div class="collapsible-body">
-            <p>
+<div class="row">
+    {% for department in departments %}
+    <div class="col s12 m6 l3">
+        <div class="card light-blue darken-4 center-align">
+            <div class="card-content white-text">
+                <span class="card-title">{{ department.department_name }}</span>
+            </div>
+            <div class="card-action">
                 <a href="{{ url_for('edit_department', department_id=department.id) }}" class="btn green accent-4">Edit</a>
-            </p>
+                <a href="{{ url_for('delete_deaprtment', department_id=department.id) }}" class="btn red">Delete</a>
+            </div>
         </div>
-    </li>
+    </div>
     {% endfor %}
-</ul>
+</div>
+
 {% endblock %}
