--- a/staffmanager/templates/edit_department.html
+++ b/staffmanager/templates/edit_department.html
@@ -1,27 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
-<h3 class="brown-text text darken-4 center-align">Edit Department</h3>
+
+<h3 class="light-blue-text text-darken-4 center-align">Add Category</h3>
 
 <div class="row card-panel grey lighten-5">
-    <form class="col s12" method="POST" action="{{ url_for('edit_department', department_id=department.id) }}">
+    <form class="col s12" method="POST" action="{{ url_for('add_department') }}">
         <!-- category name -->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fa-solid fa-plus-square right black-text yellow accent-4"></i>
-                <input id="department_name" name="department_name" value="{{ department.department_name }}" minlength="3" maxlength="25" type="text" class="validate" required>
-                <label for="department_name">Department Name</label>
+                <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
+                <input id="deaprtment_name" name="deaprtment_name" minlength="3" maxlength="25" type="text" class="validate" required>
+                <label for="deaprtment_name">Department Name</label>
             </div>
         </div>
         <!-- submit button -->
         <div class="row">
             <div class="col s12 center-align">
-                <button type="submit" class="btn-large black-text yellow accent-4">
-                    Edit Category <i class="fa-solid fa-edit yellow accent-4""></i>
+                <button type="submit" class="btn-large light-blue darken-1">
+                    Add Deaprtment <i class="fas fa-plus-square right"></i>
                 </button>
             </div>
         </div>
     </form>
 </div>
-
 
 {% endblock %}
