added delete employee , deaprtment and edit function

--- a/staffmanager/templates/add_department.html
+++ b/staffmanager/templates/add_department.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
-                <input id="department_name" name="deparment_name" minlength="3" maxlength="25" type="text" class="validate" required>
+                <input id="department_name" name="department_name" minlength="3" maxlength="25" type="text" class="validate" required>
                 <label for="department_name">Department Name</label>
             </div>
         </div>
