--- a/staffmanager/templates/edit_department.html
+++ b/staffmanager/templates/edit_department.html
@@ -9,15 +9,15 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
-                <input id="deaprtment_name" name="deaprtment_name" minlength="3" maxlength="25" type="text" class="validate" required>
-                <label for="deaprtment_name">Department Name</label>
+                <input id="department_name" name="department_name" minlength="3" maxlength="25" type="text" class="validate" required>
+                <label for="department_name">Department Name</label>
             </div>
         </div>
         <!-- submit button -->
         <div class="row">
             <div class="col s12 center-align">
                 <button type="submit" class="btn-large light-blue darken-1">
-                    Add Deaprtment <i class="fas fa-plus-square right"></i>
+                    Add Department <i class="fas fa-plus-square right"></i>
                 </button>
             </div>
         </div>
