--- a/staffmanager/templates/departments.html
+++ b/staffmanager/templates/departments.html
@@ -20,7 +20,7 @@
             </div>
             <div class="card-action">
                 <a href="{{ url_for('edit_department', department_id=department.id) }}" class="btn green accent-4">Edit</a>
-                <a href="{{ url_for('delete_deaprtment', department_id=department.id) }}" class="btn red">Delete</a>
+                <a href="{{ url_for('delete_department', department_id=department.id) }}" class="btn red">Delete</a>
             </div>
         </div>
     </div>
