--- a/staffmanager/templates/employee.html
+++ b/staffmanager/templates/employee.html
@@ -23,7 +23,7 @@
         </div>
         <div class="collapsible-body">
             <strong>{{ employee.department }}</strong>
-            <p>{{ employee.employee_skills }}</p>
+            <p>{{ employee.employee_position }}</p>
             <p>
                 <a href="{{ url_for('edit_employee', employee_id=employee.id) }}" class="btn green accent-4">Edit</a>
                 <a href="{{ url_for('delete_employee', employee_id=employee.id) }}" class="btn red">Delete</a>
