--- a/staffmanager/templates/edit_employee.html
+++ b/staffmanager/templates/edit_employee.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="light-blue-text text-darken-4 center-align">Edit Empoyee</h3>
+<h3 class="light-blue-text text-darken-4 center-align">Edit Emplpoyee</h3>
 
 <div class="row card-panel grey lighten-5">
     <form class="col s12" method="POST" action="{{ url_for('edit_employee', employee_id=employee.id) }}">
@@ -9,7 +9,8 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
-                <input id="employee_name" name="employee_name" value="{{ employee.employee_name }}" minlength="5" maxlength="50" type="text" class="validate" required>
+                <input id="employee_name" name="employee_name" value="{{ employee.employee_name, employee.employee_email }}" minlength="5" maxlength="50"
+                    type="text" class="validate" required>
                 <label for="employee_name">Employee Name</label>
             </div>
         </div>
@@ -17,7 +18,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                <input id="employee_email" name="employee_email" minlength="5" maxlength="25" type="text" class="validate" required>
+                <input id="employee_email" name="employee_email" minlength="5" maxlength="50" type="text" class="validate" required>
                 <label for="employee_email">Employee Email</label>
             </div>
         </div>
@@ -30,36 +31,38 @@
             </div>
         </div>
         
+       
         <!-- start date -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-calendar-alt prefix light-blue-text text-darken-4"></i>
-                <input id="start_date" name="start_date" type="text" class="datepicker validate" required>
-                <label for="start_date">Start Date</label>
+                <input id="start_date" name="start_date" type="text" value="{{ employee.start_date.strftime('%d %B, %Y') }}"
+                    class="datepicker validate" required>
+                <label for="start_date">Due Date</label>
             </div>
         </div>
-          <!-- category id -->
-          <div class="row">
+        <!-- category id -->
+        <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
                 <select id="department_id" name="department_id" class="validate" required>
                     <option value="" disabled>Choose Department</option>
                     {% for department in departments %}
-                        {% if departemnt == employee.department %}
-                            <option value="{{ departemnt.id }}" selected>{{ department.departemnt_name }}</option>
+                        {% if department== employee.department %}
+                            <option value="{{ department.id }}" selected>{{ department.department_name }}</option>
                         {% else %}
-                            <option value="{{ department.id }}">{{ department.departemnt_name }}</option>
+                            <option value="{{ department.id }}">{{ department.department_name }}</option>
                         {% endif %}
                     {% endfor %}
                 </select>
-                <label for="department_id">Department</label>
+                <label for="department_id">Dpartment</label>
             </div>
         </div>
         <!-- submit button -->
         <div class="row">
             <div class="col s12 center-align">
                 <button type="submit" class="btn-large light-blue darken-1">
-                    Add Employee <i class="fas fa-plus-square right"></i>
+                    Edit Employee <i class="fas fa-edit right"></i>
                 </button>
             </div>
         </div>
